[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sappy"
version = "0.1.0"
description = "Sound Analysis Pro in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Paul Ecoffet", email = "ecoffet.paul@gmail.com"},
]
maintainers = [
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
]
keywords = [
    "Sound Analysis Pro",
    "Python",
    "birdsong",
    "bioacoustics",
    "animal behavior",
    "neuroscience",
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
]

dependencies = [
    'aubio',
    'libtfr',
    'matplotlib',
    'numpy',
    'scipy',
    'seaborn',
]

[project.optional-dependencies]
tests = [
    "pytest >=6.2.1",
    "pytest-cov >=2.12.0"
]
docs = [
    "jupyterlab >=3.0.3",
    "jupytext >=1.13.8",
    "librosa >=0.9.1",
    "myst-nb >=0.15.0",
    "pyprojroot >=0.2.0",
    "seaborn >=0.11.2",
    "Sphinx >=3.4.3",
    "sphinx-autobuild >= 2021.3.14",
    "sphinx-book-theme >=0.3.2",
    "sphinx-copybutton >=0.4.0",
    "sphinx-design >=0.2.0",
    "sphinxext-opengraph  >=0.5.1",
    "sphinx-tabs >= 3.3.1",
]
dev = [
    'flit',
    'twine',
]

[tool.flit.sdist]
exclude = [
    "tests/data_for_tests"
]
